# SUiM

./: .eslintrc.cjs  .prettierignore  .prettierrc.cjs  package.json  tsconfig.json  tsconfig.node.json  uno.colors.ts  uno.config.ts  vite.config.ts
src/: App.svelte  Main.svelte  main.ts  styles.css  styles.pcss  types.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  figure.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  tauri.windwos.conf.json
src-tauri/src/: devtools.rs  io.rs  main.rs
src-tauri/src/mac_os/: mod.rs
src-tauri/src/windows/: mod.rs
src/common/: index.ts
src/lib/: Avatar.svelte  MainAvatar.svelte  MessageBox.svelte  OrdinaryMessage.svelte  PlusButton.svelte  SideBar.svelte  Topbar.svelte  WinController.svelte
src/page/: BasePage.svelte  Message.svelte  NewCard.svelte  Settings.svelte
src/stores/: Figure.ts
